--- a/lab1.html
+++ b/lab1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Minnesota Wild</title>
+</head>
 
 <body>
 
@@ -8,7 +10,7 @@
 <img src='mnwild.png' alt='Minnesota Wild' width='400' height='150'>
 <canvas id="myChart" width="400" height="200"></canvas>
 <script src="lab1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"/></script>
 <script>
 var zeroToTen = 0;
 for(var i = 0; i < myObject.length; i++){
@@ -18,37 +20,37 @@ for(var i = 0; i < myObject.length; i++){
 }	
 var tenToTwenty = 0;
 for(var i = 0; i < myObject.length; i++){
-	if(myObject[i].Pts >10 && <=20){
+	if(myObject[i].Pts >10 && myObject[i].Pts <=20){
 		tenToTwenty +=1;
 	}
 }
 var twentyToThirty = 0;
 for(var i = 0; i < myObject.length; i++){
-	if(myObject[i].Pts >=20 && <=30){
+	if(myObject[i].Pts >=20 && myObject[i].Pts <=30){
 		twentyToThirty +=1;
 	}
 }
 var thirtyToFourty = 0;
 for(var i = 0; i < myObject.length; i++){
-	if(myObject[i].Pts >=30 && <=40){
+	if(myObject[i].Pts >=30 && myObject[i].Pts <=40){
 		thirtyToFourty +=1;
 	}
 }
 var fourtyToFifty = 0;
 for(var i = 0; i < myObject.length; i++){
-	if(myObject[i].Pts >=40 && <=50){
+	if(myObject[i].Pts >=40 && myObject[i].Pts <=50){
 		fourtyToFifty +=1;
 	}
 }
 var fiftyToSixty = 0;
 for(var i = 0; i < myObject.length; i++){
-	if(myObject[i].Pts >=50 && <=60){
+	if(myObject[i].Pts >=50 && myObject[i].Pts <=60){
 		fiftyToSixty +=1;
 	}
 }
 var sixtyToSeventy = 0;
 for(var i = 0; i < myObject.length; i++){
-	if(myObject[i].Pts >=60 && <=70){
+	if(myObject[i].Pts >=60 && myObject[i].Pts <=70){
 		sixtyToSeventy +=1;
 	}
 }
@@ -68,7 +70,7 @@ var myChart = new Chart(ctx, {
 				borderColor:
 					'rgba(255, 26, 26, 1)',
 				borderWidth: 5,
-				data: [0, 5, 20, 15, 20, 25, 30, 35, 40],
+				data: [zeroToTen, tenToTwenty, twentyToThirty, thirtyToFourty, fourtyToFifty, fiftyToSixty, sixtyToSeventy],
         }]
     },
 	options: {
